<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="asterik">*</string>
    <string name="frontslash">/</string>
    <string name="equal">=</string>
    <string name="cancelc">C</string>

</resources>
